// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.html - html-verify 1`] = `
<!-- @prettier -->

<div
            >  666             </div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!-- @prettier -->

<div>666</div>

`;

exports[`without-pragma.html - html-verify 1`] = `
<div
            >  666             </div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div
            >  666             </div>

`;
